--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://arshsiddiqui.github.io
+baseURL: https://arshsiddiquitestwriting.onrender.com
 title: Arsh Siddiqui
 theme: hugo-book
 
