--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://arshsiddiquitestwriting.onrender.com"
+baseURL = "https://testwriting.pages.dev/"
 languageCode = "en-us"
 title = "Arsh Siddiqui"
 theme = 'hugo-book'
