--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://testwriting.pages.dev/
+baseURL: https://arshsiddiquitestwriting.onrender.com
 title: Arsh Siddiqui
 theme: hugo-book
 
