--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-baseURL: https://arshsiddiquitestwriting.onrender.com
-=======
-baseURL: https://testwriting.pages.dev/
->>>>>>> parent of 2c01972 (Really adding everything)
+baseURL: http://arshsiddiqui.github.io
 title: Arsh Siddiqui
 theme: hugo-book
 
